Bindeo de la lista de vídeo a la pantalla de subir/reproducir vídeo. Comprobando el FlyoutHeader.

--- a/AppTFG/AppTFG/Paginas/PaginaPueblo.xaml
+++ b/AppTFG/AppTFG/Paginas/PaginaPueblo.xaml
@@ -26,7 +26,7 @@
                                         <ColumnDefinition Width="*"/>
                                     </Grid.ColumnDefinitions>
                                     <Entry Grid.Column="0" x:Name="txtNombre" TextColor="Black" Text="{Binding Nombre}" 
-                                Placeholder="Ingresa el nombre del pueblo" HorizontalOptions="Start" FontSize="Large"
+                                Placeholder="Ingresa el nombre del pueblo" HorizontalOptions="StartAndExpand" FontSize="Large"
                                 PlaceholderColor="LightGray" BackgroundColor="White" FontFamily="BSDRegular" />
                                     <Button Grid.Column="1" x:Name="btnImagen" Text="Foto perfil" 
                                 BackgroundColor="Transparent" Margin="0" FontSize="Medium"
