--- a/AppTFG/AppTFG/Controls/FlyoutHeader.xaml
+++ b/AppTFG/AppTFG/Controls/FlyoutHeader.xaml
@@ -2,6 +2,7 @@
 <ContentView xmlns="http://xamarin.com/schemas/2014/forms" 
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AppTFG.Controls.FlyoutHeader"
+             xmlns:ic="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin"
              HeightRequest="150">
     <Grid BackgroundColor="LightGray">
         <Grid.ColumnDefinitions>
@@ -13,7 +14,10 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Label Grid.Column="0" Grid.RowSpan="2" Text="TRAPP" FontSize="40" TextColor="White" FontAttributes="Bold" HorizontalOptions="Center" VerticalOptions="Center" FontFamily="BSDSemiBold"/>
-        <Image Grid.Column="1" Grid.Row="0"  Source="{Binding ImagenPrincipal}" WidthRequest="70" HeightRequest="70" Aspect="AspectFill" HorizontalOptions="Start"/>
-        <Label Grid.Column="1" Grid.Row="1" Text="{Binding Nombre}" FontSize="Title" FontFamily="BSDLight"/>
+        <!--<Image Grid.Column="1" Grid.Row="0" Source="logo.png"  WidthRequest="70" HeightRequest="70" Aspect="AspectFill" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand"/>-->
+        <ic:CircleImage BorderThickness="1" BorderColor="Black" Grid.Column="1" Grid.Row="0" Source="logo.png"  WidthRequest="70" HeightRequest="70" Aspect="AspectFill" HorizontalOptions="CenterAndExpand" VerticalOptions="EndAndExpand" Margin="-10,10,-10,-10"/>
+        <!--Source="{Binding ImagenPrincipal}"-->
+        <Label Grid.Column="1" Grid.Row="1" Text="Trapp" FontSize="Title" FontFamily="BSDLight" TextColor="Black"  HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand"/>
+        <!--Text="{Binding Nombre}"-->
     </Grid>
 </ContentView>
