--- a/AppTFG/AppTFG/Paginas/InicioPage.xaml
+++ b/AppTFG/AppTFG/Paginas/InicioPage.xaml
@@ -2,7 +2,8 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AppTFG.Paginas.InicioPage"
-             Title="Inicio">
+             Title="{Binding Nombre, StringFormat='Bienvenido, {0}'}"
+             NavigationPage.HasBackButton="False">
 
     <ContentPage.Content>
         <StackLayout BackgroundColor="White" HorizontalOptions="FillAndExpand" Padding="5,5,5,5">
