--- a/AppTFG/AppTFG/AppShell.xaml
+++ b/AppTFG/AppTFG/AppShell.xaml
@@ -1,14 +1,10 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <Shell xmlns="http://xamarin.com/schemas/2014/forms" 
        xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-       xmlns:local="clr-namespace:AppTFG.Paginas" 
-       xmlns:controls="clr-namespace:AppTFG.Controls"
+       xmlns:local="clr-namespace:AppTFG.Paginas"
        Title="App"
-       x:Class="AppTFG.AppShell">
-
-    <Shell.FlyoutHeader>
-        <controls:FlyoutHeader />
-    </Shell.FlyoutHeader>
+       x:Class="AppTFG.AppShell"
+       NavigationPage.HasBackButton="False">
 
     <Shell.Resources>
         <ResourceDictionary>
