--- a/AppTFG/AppTFG/Paginas/PaginaVistaListaVideos.xaml
+++ b/AppTFG/AppTFG/Paginas/PaginaVistaListaVideos.xaml
@@ -1,11 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
-             xmlns:video="clr-namespace:AppTFG.FormsVideoLibrary"
-             x:Class="AppTFG.Paginas.ListaVideosPueblo">
-    <ContentPage.ToolbarItems>
-        <ToolbarItem x:Name="btnAgregar" Text="Agregar" Order="Primary" Priority="0" Clicked="BtnAgregar_Clicked"/>
-    </ContentPage.ToolbarItems>
+             x:Class="AppTFG.Paginas.PaginaVistaListaVideos">
     <ContentPage.Content>
         <StackLayout BackgroundColor="White">
             <ActivityIndicator x:Name="indicator" Color="#263238" VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="0"/>
