--- a/AppTFG/AppTFG/Paginas/PaginaVistaPueblo.xaml
+++ b/AppTFG/AppTFG/Paginas/PaginaVistaPueblo.xaml
@@ -24,10 +24,6 @@
                                 <Label Grid.Column="0" x:Name="txtNombre" TextColor="Black" Text="{Binding Nombre}" 
                                 HorizontalOptions="StartAndExpand" FontSize="Large"
                                 BackgroundColor="White" FontFamily="BSDRegular" />
-                                <Button Grid.Column="1" x:Name="btnImagen" Text="Foto perfil" 
-                                BackgroundColor="Transparent" Margin="0" FontSize="Medium"
-                                TextColor="Black" WidthRequest="90"  FontFamily="BSDRegular"
-                                HorizontalOptions="End" Clicked="BtnImagen_Clicked"/>
                             </Grid>
                             <Grid HorizontalOptions="StartAndExpand" VerticalOptions="Start" ColumnSpacing="0">
                                 <Grid.ColumnDefinitions>
@@ -61,9 +57,8 @@
                                     Clicked="BtnVideo_Clicked" Grid.Column="3" Grid.Row="0" BorderColor="Gray" FontFamily="BSDRegular"/>
                                 <Label Text="Vídeos" FontSize="Large"  Grid.Column="3" Grid.Row="1" HorizontalOptions="Center" FontFamily="BSDRegular"/>
                             </Grid>
-                            <Editor x:Name="txtDescripcion" TextColor="Black" Text="{Binding Descripcion}" 
-                                Placeholder="Ingresa una descripción del pueblo"  Margin="10, 0, 10, 25" AutoSize="TextChanges"
-                                PlaceholderColor="LightGray" BackgroundColor="White" FontSize="Large" FontFamily="BSDRegular"/>
+                            <Label x:Name="txtDescripcion" TextColor="Black" Text="{Binding Descripcion}" 
+                                Margin="10, 0, 10, 25" BackgroundColor="White" FontSize="Large" FontFamily="BSDRegular"/>
                         </StackLayout>
                     </Frame>
                     <!--<Label Text="Coordenadas del pueblo(Latitud, Longitud): " TextColor="Gray" FontSize="Medium"/>
