--- a/AppTFG/AppTFG/Paginas/Registrarse.xaml
+++ b/AppTFG/AppTFG/Paginas/Registrarse.xaml
@@ -16,11 +16,14 @@
                     </LinearGradientBrush>
                 </BoxView.Background>
             </BoxView>
+            <StackLayout>
+                <Button x:Name="volver" VerticalOptions="Start" HorizontalOptions="Start" BackgroundColor="Transparent" TextColor="Black" Text="Volver a Inicio sesión" FontFamily="BSDRegular" Margin="10,10,10,10" Command="{Binding Login}"/>
+            </StackLayout>
             <StackLayout VerticalOptions="Center">
-                <Entry x:Name="Email" Placeholder="Usuario" Text="{Binding Nombre}" Margin="10,0,10,10" FontFamily="BSDRegular"/>
-                <Entry x:Name="password" Placeholder="Contraseña" Text="{Binding Password}" IsPassword="True" Margin="10,0,10,10" FontFamily="BSDRegular"/>
-                <Entry x:Name="password2" Placeholder="Verificar Contraseña" Text="{Binding ConfirmPassword}" IsPassword="True" Margin="10,0,10,10" FontFamily="BSDRegular"/>
-                <Button x:Name="signup" Text="Registrarse" Command="{Binding SignUpCommand}" HorizontalOptions="Center" FontFamily="BSDRegular" BackgroundColor="White" TextColor="Black"/>
+                <Entry x:Name="usuario" Placeholder="Usuario" TextColor="Black" PlaceholderColor="Black" Text="{Binding Nombre}" Margin="10,0,10,10" FontFamily="BSDRegular"/>
+                <Entry x:Name="password" Placeholder="Contraseña" TextColor="Black" PlaceholderColor="Black" Text="{Binding Password}" IsPassword="True" Margin="10,0,10,10" FontFamily="BSDRegular"/>
+                <Entry x:Name="password2" Placeholder="Verificar Contraseña" TextColor="Black" PlaceholderColor="Black" Text="{Binding ConfirmPassword}" IsPassword="True" Margin="10,0,10,10" FontFamily="BSDRegular"/>
+                <Button x:Name="signup" Text="Registrarse" Command="{Binding SignUpCommand}" HorizontalOptions="Center" FontFamily="BSDRegular" BackgroundColor="LightBlue" TextColor="Black"/>
             </StackLayout>
         </Grid>
     </ContentPage.Content>
